updated README for java tuning parameters